package view;

import com.formdev.flatlaf.intellijthemes.FlatArcOrangeIJTheme;
import controller.Controller;
import java.sql.SQLException;
import javax.swing.JOptionPane;
import javax.swing.UIManager;
import model.entity.Student;

public class AddStudent extends javax.swing.JDialog {

    public AddStudent(java.awt.Frame parent, boolean modal) {
        super(parent, modal);
        initComponents();
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        labelCIE = new javax.swing.JLabel();
        labelName = new javax.swing.JLabel();
        txtUSN = new javax.swing.JTextField();
        txtNAME = new javax.swing.JTextField();
        btnAddStudent = new javax.swing.JButton();

        setDefaultCloseOperation(javax.swing.WindowConstants.DISPOSE_ON_CLOSE);
        setTitle("Engadir Estudante");

        labelCIE.setFont(new java.awt.Font("Raleway", 0, 14)); // NOI18N
        labelCIE.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
        labelCIE.setText("CIE");

        labelName.setFont(new java.awt.Font("Raleway", 0, 14)); // NOI18N
        labelName.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
        labelName.setText("Nome");

        txtUSN.setFont(new java.awt.Font("Raleway", 0, 14)); // NOI18N
        txtUSN.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                txtUSNActionPerformed(evt);
            }
        });

        txtNAME.setFont(new java.awt.Font("Raleway", 0, 14)); // NOI18N

        btnAddStudent.setFont(new java.awt.Font("Raleway", 0, 14)); // NOI18N
        btnAddStudent.setIcon(new javax.swing.ImageIcon(getClass().getResource("/icons/icons8-add-user-male-32.png"))); // NOI18N
        btnAddStudent.setPreferredSize(new java.awt.Dimension(40, 40));
        btnAddStudent.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btnAddStudentActionPerformed(evt);
            }
        });

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
        getContentPane().setLayout(layout);
        layout.setHorizontalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addGap(59, 59, 59)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addComponent(labelCIE, javax.swing.GroupLayout.PREFERRED_SIZE, 37, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(labelName, javax.swing.GroupLayout.PREFERRED_SIZE, 43, javax.swing.GroupLayout.PREFERRED_SIZE))
                .addGap(38, 38, 38)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                    .addComponent(txtUSN, javax.swing.GroupLayout.PREFERRED_SIZE, 128, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(txtNAME, javax.swing.GroupLayout.PREFERRED_SIZE, 128, javax.swing.GroupLayout.PREFERRED_SIZE))
                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
                .addContainerGap(182, Short.MAX_VALUE)
                .addComponent(btnAddStudent, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                .addGap(147, 147, 147))
        );
        layout.setVerticalGroup(
            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
            .addGroup(layout.createSequentialGroup()
                .addGap(50, 50, 50)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(labelCIE, javax.swing.GroupLayout.PREFERRED_SIZE, 32, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(txtUSN, javax.swing.GroupLayout.PREFERRED_SIZE, 32, javax.swing.GroupLayout.PREFERRED_SIZE))
                .addGap(24, 24, 24)
                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                    .addComponent(labelName, javax.swing.GroupLayout.PREFERRED_SIZE, 31, javax.swing.GroupLayout.PREFERRED_SIZE)
                    .addComponent(txtNAME, javax.swing.GroupLayout.PREFERRED_SIZE, 31, javax.swing.GroupLayout.PREFERRED_SIZE))
                .addGap(30, 30, 30)
                .addComponent(btnAddStudent, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                .addContainerGap(58, Short.MAX_VALUE))
        );

        pack();
    }// </editor-fold>//GEN-END:initComponents

    private void txtUSNActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_txtUSNActionPerformed

    }//GEN-LAST:event_txtUSNActionPerformed

    private void btnAddStudentActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btnAddStudentActionPerformed
        cie = txtUSN.getText().trim();
        String name = txtNAME.getText().trim();

        if (name.length() == 0 || cie.length() == 0) {
            JOptionPane.showMessageDialog(rootPane, "Introduza o nome e o CIE", "Erro", JOptionPane.ERROR_MESSAGE);
            return;
        }

        Controller dao = new Controller();

        if (dao.studentExist(new Student(cie, name))) {
            JOptionPane.showMessageDialog(rootPane, "O estudante xa existe", "Erro", JOptionPane.ERROR_MESSAGE);
            return;
        } else {
            dao.addStudent(new Student(cie, name));
            JOptionPane.showMessageDialog(rootPane, "Alumnado engadido correctamente", "Éxito", JOptionPane.INFORMATION_MESSAGE);
            this.dispose();
        }
    }//GEN-LAST:event_btnAddStudentActionPerformed

    /**
     * @param args the command line arguments
     */
    public static void main(String args[]) {

        try {
            UIManager.setLookAndFeel(new FlatArcOrangeIJTheme());
            UIManager.put("Button.arc", 999);
            UIManager.put("Component.arc", 999);
            UIManager.put("ProgressBar.arc", 999);
            UIManager.put("TextComponent.arc", 999);
            UIManager.put("ToolTip.background", new java.awt.Color(245, 245, 245));
            UIManager.put("ToolTip.border", new javax.swing.border.LineBorder(new java.awt.Color(245, 121, 0), 1, true));
            UIManager.put("Table.font", new java.awt.Font("Raleway", 0, 14));
            UIManager.put("TableHeader.font", new java.awt.Font("Raleway", 0, 14));
            UIManager.put("ToolTip.font", new java.awt.Font("Raleway", 1, 14));
            UIManager.put("Button.font", new java.awt.Font("Raleway", 0, 14));
            UIManager.put("Label.font", new java.awt.Font("Raleway", 0, 14));
        } catch (javax.swing.UnsupportedLookAndFeelException ex) {
            java.util.logging.Logger.getLogger(AddStudent.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        }

        /* Create and display the dialog */
        java.awt.EventQueue.invokeLater(new Runnable() {
            public void run() {
                AddStudent dialog = new AddStudent(new javax.swing.JFrame(), true);
                dialog.addWindowListener(new java.awt.event.WindowAdapter() {
                    @Override
                    public void windowClosing(java.awt.event.WindowEvent e) {
                        System.exit(0);
                    }
                });
                dialog.setVisible(true);
            }
        });
    }

    public static String cie = "";
    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton btnAddStudent;
    private javax.swing.JLabel labelCIE;
    private javax.swing.JLabel labelName;
    private javax.swing.JTextField txtNAME;
    private javax.swing.JTextField txtUSN;
    // End of variables declaration//GEN-END:variables
}
